--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,21 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^5.4 | ^7.0"
+        "php": "^5.4 | ^7.0",
+        "dhii/expression-interface": "^0.2",
+        "dhii/output-renderer-interface": "^0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "ptrofimov/xpmock": "^1.1",
         "dhii/php-cs-fixer-config": "^0.1",
-        "codeclimate/php-test-reporter": "<=0.3.2"
+        "codeclimate/php-test-reporter": "<=0.3.2",
+        "dhii/stringable-interface": "^0.1",
+        "dhii/data-container-interface": "^0.1"
     },
     "autoload": {
         "psr-4": {
-            "Dhii\\Expression\\": "src"
+            "Dhii\\Expression\\Renderer\\": "src"
         }
     },
     "scripts": {
